package com.bc.bookcrossing.bookcrossing;

public interface GenerateRequests {



}
