package com.bc.bookcrossing.bookcrossing;

public enum LoginInStatus {
    SUCCESS,
    EMPTY_USERNAME,
    EMPTY_PASSWORD,
    COMMUNICATION_ERROR
}
