package com.bc.bookcrossing.bookcrossing;

public abstract class Observer {
}
