package com.bc.bookcrossing.bookcrossing;

import com.bc.bookcrossing.bookcrossing.Comunication.GenerateRequests;

public class Processing implements GenerateRequests {
}
