package com.bc.bookcrossing.bookcrossing;

public enum SignInStatus {
    SUCCESS,
    ERROR_USERNAME,
    ERROR_PASSWORD,
    EMPTY_NAME,
    EMPTY_LASTNAME,
    ERROR_DOB, //DATE OF BIRTH
    ERROR_COMMUNICATION

}
